[package]
name = "anchor-liquidity-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_liquidity_pool"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-math = {version="0.1.0", features = [ "no-entrypoint" ]}
thiserror = "1.0"
enum_dispatch = "0.3.7"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
borsh = "0.9.3"
imp = "0.1.0"
getrandom = "0.2.15"
solana-program = "1.18.14"

